# todo-md

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  TODO.md  go.mod  go.sum  pyproject.toml  todo-md  todo-md-updater
cmd/todo-md/: main.go
internal/app/todomd/: args.go  extract.go  git.go  main.go  source.go  todofile.go  todos.go
pytodomd/: __init__.py  runner.py  settings.py
scripts/: build.sh
tests/: test_todomd.py
tests/samples/002-update-file/a/: sample.txt
tests/samples/002-update-file/b/: sample.txt
tests/samples/004-numeric-ordering/a/: sample.txt
